# for_next_ai

./: .gitignore  QUICK_START.md  README.md  _codeql_detected_source_root  build.py  config.json  demo_network.py  requirements.txt  run_tests.py
cat_eat/: __init__.py  config.py  pipeline.py
cat_eat/control/: __init__.py  config_manager.py  door_fsm.py
cat_eat/control/drivers/: __init__.py  base.py  gpio_driver.py  mock_driver.py  udp_driver.py
cat_eat/utils/: state_cache.py
cat_eat/vision/: __init__.py  cat_identifier.py  embedding.py  mediapipe_detector.py
cpp_example/: ARCHITECTURE.md  CMakeLists.txt  NETWORK_README.md  README.md  main.cpp  network_discovery.hpp  network_example.cpp
cpp_example/_codeql_build_dir/: cpp_example  network_example
examples/: run_system_with_web.py
tests/: __init__.py  test_cat_identifier.py  test_config_manager.py  test_door_fsm.py  test_drivers.py  test_pipeline_integration.py  test_state_cache.py  test_web_server.py
web/: __init__.py  server.py
web/templates/: index.html
